# Web_hw_9

./: README.md  custom_logger.py  pyproject.toml
config/: connect_db.py  models.py
first_task/: main.py  seed.py
second_task/: authors.json  main.py  seed.py
