[tool.poetry]
name = "web-hw-9"
version = "0.1.0"
description = "Scrapy web-site"
authors = ["Vlad <vlad111121562@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.28"
requests = "^2.31.0"
lxml = "^5.1.0"
mongoengine = "^0.28.2"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
